# crawl4ai_augment

./: .gitignore  BuildInstructions.md  Introduction.md  README.md  SELF_INTEGRATION_GUIDE.md
mcp-server/: pyproject.toml  test_server.py
mcp-server/src/crawl4ai_mcp/: server.py
mcp-server/src/crawl4ai_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: integrate.sh
templates/: augment-settings.json  mcp-config.json
