[project]
name = "crawl4ai-mcp-server"
version = "0.1.0"
description = "MCP server for Crawl4AI integration"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.4.0",
    "crawl4ai>=0.4.0",
    "aiofiles>=24.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"